--- a/install
+++ b/install
@@ -16,3 +16,5 @@ git submodule update --init --recursive "${DOTBOT_DIR}"
 
 sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
        https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+
+brew bundle
